--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="utf-8" />
+  <title>Katrina Hayes</title>
+  <link rel="stylesheet" href="css/style.css">
+ </head>
+ <body>
+  <p>Hello there... please enjoy this strolling cat while I learn web development. Be right back with info on my projects and portfolio.</p>
+
+  <img style="position:absolute;" src="http://www.anniemation.com/clip_art/images/cat-walk.gif">
+
+  <script src="js/main.js"></script>
+
+ </body>
+</html>
