--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
  <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Katrina Hayes</title>
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
   <link rel="stylesheet" href="css/style.css">
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script src="js/underscore.js"></script>
+  <script src="js/cat.js"></script>
+  <script src="js/canvas.js"></script>
  </head>
  <body>
-  <p>Hello there... please enjoy this strolling cat while I learn web development. Be right back with info on my projects and portfolio.</p>
-
-  <img style="position:absolute;" src="http://www.anniemation.com/clip_art/images/cat-walk.gif">
-
-  <script src="js/main.js"></script>
-
+  <div class="container">
+    <div class="intro">
+      <p class="hello">Hello there...</p>
+      <p>Please enjoy this strolling cat while I learn web development.</p>
+      <p>Be right back with info on my projects and portfolio.</p>
+      <p>P.S. For extra time-wasting, click on the screen to see changing patterns.</p>
+    </div>
+    <img id="cat" src="http://www.anniemation.com/clip_art/images/cat-walk.gif">
+  </div>
+  <canvas id="myCanvas"></canvas>
  </body>
 </html>
