--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
  </head>
  <body>
   <div class="container">
+    <div class="spacer"></div>
     <div class="intro">
-      <p class="hello">Hello there...</p>
-      <p>Please enjoy this strolling cat while I learn web development.</p>
-      <p>Be right back with info on my projects and portfolio.</p>
-      <p>P.S. For extra time-wasting, click on the screen to see changing patterns.</p>
+      <div class="text-holder">
+        <p class="hello">Hello there...</p>
+        <p>Please enjoy this strolling cat while I learn web development. Be right back with info on my projects and portfolio.</p>
+        <p>P.S. For extra time-wasting, click on the screen to see changing patterns.</p>
+      </div>
     </div>
     <img id="cat" src="http://www.anniemation.com/clip_art/images/cat-walk.gif">
   </div>
