main flow is there now.

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -28,7 +28,6 @@
           <h1 class="hello">Katrina Hayes</h1>
           <h1>Web developer. Language learner.</h1>
           <!-- TODO: add contact icons and links -->
-          <h2>Projects below >></h2>
         </div>
       </div>
 
@@ -36,42 +35,68 @@
     <div class="main">
       <div class="about">
         <h1 id="about-heading">About</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore error quaerat praesentium. Sapiente eos distinctio fugiat, nobis qui veritatis vel incidunt harum earum, debitis excepturi beatae maiores, natus recusandae voluptates.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo nesciunt voluptate ullam, laudantium voluptatibus rem ab recusandae expedita minus ex provident mollitia veritatis odit natus reiciendis distinctio aut fugiat quis.</p>
+        <div class="about-info">
+          <p class="one">Hi! I'm Katrina, an (almost) freshly-minted web developer, about to emerge from the mind-bending fog of General Assembly's Web Development Immersive course.
+          <p>I'm transitioning from a background in linguistics, policy & project management. I've always loved learning languages – Spanish, French, Arabic, and most recently Japanese - and learning computer languages has been just as enjoyable.</p>
+          <p>Learning to code has streched (read: battered!) my brain, and I'm excited to find myself in a new world of endless learning.</p>
+          <p>When I'm not coding, you'll find me drinking coffee (am) or wine (pm), deciding on my next book to read, or being fascinated watching my one-year-old learn a new word.</p>
+        </div>
+        <div class="skills">
+          <div class="skills-head">
+            <h3>Skills</h3>
+          </div>
+          <div class="skills-body">
+            <div>JavaScript</div>
+            <div>jQuery</div>
+            <div>React.js</div>
+            <div>HTML5/CSS3</div>
+            <div>Ruby</div>
+            <div>Rails</div>
+            <div>AJAX</div>
+            <div>SQL</div>
+            <div>Git</div>
+          </div>
+        </div>
       </div>
+
       <div class="projects">
         <h1 id="projects-heading">Projects</h1>
         <div class="project co-canvas">
           <a href="#">
-            <figure class="square">
+            <figure class="circle">
               <img src="../images/cocanvas.png" alt="CoCanvas">
               <figcaption>CoCanvas</figcaption>
+              <figcaption>View the site/make art</figcaption>
             </figure>
           </a>
           <div class="description">
-            <h3>CoCanvas: Collaborative pixel art</h3>
+            <h3>CoCanvas: Collaborative Pixel Art</h3>
             <p>My first website created as part of a group, CoCanvas allows you to draw pixel art on a neverending canvas with friends and strangers on the internet. Pixels are updated live so you can watch as art is created. The app uses a rails server on the backend, and on the frontend is a basic Nodejs app using expressJS to create a server that is deployed to Heroku. Try it out, and send me a shot of your pixel artwork!</p>
           </div>
+          <button class="code">Show me the code!</button>
         </div>
         <div class="project bookpinch">
           <figure class="circle">
             <img src="../images/bookpinch.png" alt="BookPinch">
             <figcaption>BookPinch</figcaption>
+            <figcaption>View site/pinch books</figcaption>
           </figure>
           <div class="description">
             <h3>BookPinch: Track books. Find readers with similar book loves. Pinch their books.</h3>
             <p>BookPinch is the first website I created using Ruby on Rails. It allows users to search books via the Goodreads API, add books to a bookshelf as reading, to read and read, and find other users who love the same books you do, then search their favourites shelf for your next book to pinch.</p>
           </div>
+          <button class="code">Show me the code!</button>
         </div>
         <div class="project noughts-crosses">
-          <figure class="square">
-            <img src="#" alt="Noughts&Crosses">
-            <figcaption>Noughts & Crosses</figcaption>
+          <figure class="circle">
+            <img src="../images/noughts&crosses.png" alt="Noughts&Crosses">
+            <figcaption>Play a game</figcaption>
           </figure>
           <div class="description">
             <h3>Noughts & Crosses: Xs vs. Blowfish</h3>
             <p>This Noughts & Crosses game was my first major project. It allows two player games as well as against the (not very smart at this stage) computer. Seemingly simple, coding this was my first proper foray into the mind-stretching world of writing code and following it as it plays out, only to re-write and re-follow it until finally it (more or less) acts how you're hoping. I won't soon forget that sweet feeling.</p>
           </div>
+          <button class="code">Show me the code!</button>
         </div>
       </div>
     </div>
