--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Katrina Hayes</title>
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <script type="text/javascript" src="jquery.js"></script>
   <script src="animations.js"></script>
   <script src="canvas.js"></script>
-  <!-- <script src="js/navCanvas.js"></script> -->
  </head>
  <body>
   <div class="container">
@@ -74,31 +73,35 @@
       <div class="projects">
         <h1 id="projects-heading">Projects</h1>
         <div class="project co-canvas">
-          <a href="#">
-            <figure class="circle">
-              <img src="../images/cocanvas.png" alt="CoCanvas">
-              <figcaption>CoCanvas</figcaption>
-              <figcaption><a href="https://co-canvas.herokuapp.com" target="_blank">View the site/make art</a></figcaption>
-            </figure>
-          </a>
+          <figure class="circle">
+            <img src="../images/cocanvas.png" alt="CoCanvas">
+            <figcaption><a href="https://co-canvas.herokuapp.com" target="_blank">View the site/make art</a></figcaption>
+          </figure>
           <div class="description">
-            <h3>CoCanvas</h3>
-            <p>CoCanvas is a collaborative pixel art app that allows you to draw pixel art on a neverending canvas with friends and strangers on the internet.</p>
-            <p>My first major group project, the app has a Rails backend and uses Action Cable and WebSockets to update the pixels live as users add them to the canvas. It also features a live chat component created in React.</p>
+            <div class="desc-text">
+              <h3>CoCanvas</h3>
+              <p>CoCanvas is a collaborative pixel art app that allows you to draw pixel art on a neverending canvas with friends and strangers on the internet.</p>
+              <p>My first major group project, the app has a Rails backend and uses Action Cable and WebSockets to update the pixels live as users add them to the canvas. It also features a live chat component created in React.</p>
+            </div>
+            <div class="desc-button">
+              <button class="code"><a href="https://github.com/cocanvas" target="_blank">Show me the code!</a></button>
+            </div>
           </div>
-          <button class="code"><a href="https://github.com/cocanvas" target="_blank">Show me the code!</a></button>
         </div>
         <div class="project bookpinch">
           <figure class="circle">
             <img src="../images/bookpinch.png" alt="BookPinch">
-            <figcaption>BookPinch</figcaption>
             <figcaption><a href="https://bookpinch.herokuapp.com">View site/pinch books</a></figcaption>
           </figure>
           <div class="description">
-            <h3>BookPinch</h3>
-            <p>BookPinch is built with Ruby on Rails. It allows users to search for books via the Goodreads API, track those books as 'to read', 'reading' and 'read', then find other users who love the same books you do, and explore their favourites shelf for your next book to pinch.</p>
+            <div class="desc-text">
+              <h3>BookPinch</h3>
+              <p>BookPinch is built with Ruby on Rails. It allows users to search for books via the Goodreads API, track those books as 'to read', 'reading' and 'read', then find other users who love the same books you do, and explore their favourites shelf for your next book to pinch.</p>
+            </div>
+            <div class="desc-button">
+              <button class="code"><a href="https://github.com/katshaze/project1" target="_blank">Show me the code!</a></button>
+            </div>
           </div>
-          <button class="code"><a href="https://github.com/katshaze/project1" target="_blank">Show me the code!</a></button>
         </div>
         <div class="project noughts-crosses">
           <figure class="circle">
@@ -106,11 +109,15 @@
             <figcaption><a href="https://github.com/katshaze/project0" target="_blank">Play a game</a></figcaption>
           </figure>
           <div class="description">
-            <h3>Noughts & Crosses</h3>
-            <p>My first major project, this website allows you to play Noughts & Crosses against another human or the (not very smart at this stage) computer. It is built using JavaScript (including jQuery), HTML and CSS.</p>
-            <p>It sounded simple, but coding this was my first proper foray into the mind-stretching world of game logic and following my code around and around as it played out, only to re-write and re-follow it until finally it (more or less) acted how I was hoping. I won't soon forget that sweet feeling.</p>
+            <div class="desc-text">
+              <h3>Noughts & Crosses</h3>
+              <p>My first major project, this website allows you to play Noughts & Crosses against another human or the (not very smart at this stage) computer. It is built using JavaScript (including jQuery), HTML and CSS.</p>
+              <p>It sounded simple, but coding this was my first proper foray into the mind-stretching world of game logic and following my code around and around as it played out, only to re-write and re-follow it until finally it (more or less) acted how I was hoping. I won't soon forget that sweet feeling.</p>
+            </div>
+            <div class="desc-button">
+              <button class="code"><a href="https://github.com/katshaze/project0" target="_blank">Show me the code!</button>
+            </div>
           </div>
-          <button class="code"><a href="https://github.com/katshaze/project0" target="_blank">Show me the code!</button>
         </div>
       </div>
     </div>
