switch from cat to live

--- a/index.html
+++ b/index.html
@@ -5,25 +5,130 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Katrina Hayes</title>
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-  <link rel="stylesheet" href="css/style.css">
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script src="js/underscore.js"></script>
-  <script src="js/cat.js"></script>
-  <script src="js/canvas.js"></script>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+  <script type="text/javascript" src="jquery.js"></script>
+  <script src="animations.js"></script>
+  <script src="canvas.js"></script>
  </head>
  <body>
   <div class="container">
-    <div class="spacer"></div>
-    <div class="intro">
-      <div class="text-holder">
-        <p class="hello">Hello there...</p>
-        <p>Please enjoy this strolling cat while I learn web development. Be right back with info on my projects and portfolio.</p>
-        <p>P.S. For extra time-wasting, click on the screen to see changing patterns.</p>
+    <header>
+      <nav>
+        <a id="home-nav" href="#">home</a>
+        <a id="about-nav" href="#">about</a>
+        <a id="projects-nav" href="#">projects</a>
+      </nav>
+      <div class="spacer"></div>
+      <div class="intro">
+        <div class="text-holder">
+          <h1 class="hello">Katrina Hayes</h1>
+          <h1>Web developer. Language learner.</h1>
+          <div class='contact-icons'>
+            <a class="fab fa-github" href="https://www.github.com/katshaze" target="_blank"></a>
+            <a class="fab fa-linkedin" href="https://www.linkedin.com/in/katrina-hayes/" target="_blank"></a>
+            <a class="fab fa-twitter-square" href="https://twitter.com/katshaze" target="_blank"></a>
+            <a class="fas fa-file-alt" href="../assets/KatrinaHayes_Resume_2018.pdf" target="_blank"></a>
+          </div>
+        </div>
+      </div>
+
+    </header>
+    <div class="main">
+      <div class="about">
+        <h1 id="about-heading">About</h1>
+        <div class="about-info">
+          <p class="one">I'm an (almost) freshly-minted web developer, about to emerge from the mind-bending fog of an immersive web development course.</p>
+          <p>Transitioning from a background in linguistics & project management, learning languages – Spanish, French, Arabic, and most recently Japanese - has long been my thing, and learning computer languages has been just as enjoyable.</p>
+          <p>Coding has opened my brain to new ways of thinking, and I'm excited to find myself in a new world of endless learning. When I'm not coding, you'll find me planning trips, reading books, or being fascinated as my one-year-old learns a new word.</p>
+        </div>
+        <div class="skills">
+          <div class="skills-head">
+            <h3>Skills</h3>
+          </div>
+          <div class="skills-body">
+            <div>JavaScript</div>
+            <div>jQuery</div>
+            <div>React.js</div>
+            <div>HTML5/CSS3</div>
+            <div>Ruby</div>
+            <div>Rails</div>
+            <div>AJAX</div>
+            <div>SQL</div>
+            <div>Git</div>
+          </div>
+        </div>
+        <div class="learning">
+          <div class="learning-head">
+            <h3>Learning</h3>
+          </div>
+          <div class="learning-body">
+            <div>Node.js</div>
+            <div>Python</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="projects">
+        <h1 id="projects-heading">Projects</h1>
+        <div class="project co-canvas">
+          <figure class="circle">
+            <img src="../images/cocanvas.png" alt="CoCanvas">
+            <figcaption><a href="https://co-canvas.herokuapp.com" target="_blank">View the site/make art</a></figcaption>
+          </figure>
+          <div class="description">
+            <div class="desc-text">
+              <h3>CoCanvas</h3>
+              <p>CoCanvas is a collaborative pixel art app that allows you to draw pixel art on a neverending canvas with friends and strangers on the internet.</p>
+              <p>My first major group project, the app has a Rails backend and uses Action Cable and WebSockets to update the pixels live as users add them to the canvas. It also features a live chat component created in React.</p>
+            </div>
+            <div class="desc-button">
+              <button class="code"><a href="https://github.com/cocanvas" target="_blank">Show me the code!</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="project bookpinch">
+          <figure class="circle">
+            <img src="../images/bookpinch.png" alt="BookPinch">
+            <figcaption><a href="https://bookpinch.herokuapp.com">View site/pinch books</a></figcaption>
+          </figure>
+          <div class="description">
+            <div class="desc-text">
+              <h3>BookPinch</h3>
+              <p>BookPinch is built with Ruby on Rails. It allows users to search for books via the Goodreads API, track those books as 'to read', 'reading' and 'read', then find other users who love the same books you do, and explore their favourites shelf for your next book to pinch.</p>
+            </div>
+            <div class="desc-button">
+              <button class="code"><a href="https://github.com/katshaze/project1" target="_blank">Show me the code!</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="project noughts-crosses">
+          <figure class="circle">
+            <img src="../images/noughts&crosses.png" alt="Noughts&Crosses">
+            <figcaption><a href="https://github.com/katshaze/project0" target="_blank">Play a game</a></figcaption>
+          </figure>
+          <div class="description">
+            <div class="desc-text">
+              <h3>Noughts & Crosses</h3>
+              <p>My first major project, this website allows you to play Noughts & Crosses against another human or the (not very smart at this stage) computer. It is built using JavaScript (including jQuery), HTML and CSS.</p>
+              <p>It sounded simple, but coding this was my first proper foray into the mind-stretching world of game logic and following my code around and around as it played out, only to re-write and re-follow it until finally it (more or less) acted how I was hoping. I won't soon forget that sweet feeling.</p>
+            </div>
+            <div class="desc-button">
+              <button class="code"><a href="https://github.com/katshaze/project0" target="_blank">Show me the code!</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <img id="cat" src="http://www.anniemation.com/clip_art/images/cat-walk.gif">
+    <footer>
+      <div class="final">
+        <p>&#128033; &#128033; &#128033;</p>
+        <a id="foot-nav" href='#'>Return to top</a>
+      </div>
+    </footer>
+    <canvas id="myCanvas"></canvas>
   </div>
-  <canvas id="myCanvas"></canvas>
+
  </body>
 </html>
