--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Katrina Hayes</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-  <script type="text/javascript" src="jquery.js"></script>
-  <script src="animations.js"></script>
-  <script src="canvas.js"></script>
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script src="js/animations.js"></script>
+  <script src="js/canvas.js"></script>
  </head>
  <body>
   <div class="container">
