--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Katrina Hayes</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <style>
+  @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Open+Sans|Raleway');
+  </style>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <script type="text/javascript" src="js/jquery.js"></script>
   <script src="js/animations.js"></script>
@@ -29,7 +32,7 @@
             <a class="fab fa-github" href="https://www.github.com/katshaze" target="_blank"></a>
             <a class="fab fa-linkedin" href="https://www.linkedin.com/in/katrina-hayes/" target="_blank"></a>
             <a class="fab fa-twitter-square" href="https://twitter.com/katshaze" target="_blank"></a>
-            <a class="fas fa-file-alt" href="../assets/KatrinaHayes_Resume_2018.pdf" target="_blank"></a>
+            <a class="fas fa-file-alt" href="assets/KatrinaHayes_Resume_2018.pdf" target="_blank"></a>
           </div>
         </div>
       </div>
@@ -39,9 +42,9 @@
       <div class="about">
         <h1 id="about-heading">About</h1>
         <div class="about-info">
-          <p class="one">I'm an (almost) freshly-minted web developer, about to emerge from the mind-bending fog of an immersive web development course.</p>
-          <p>Transitioning from a background in linguistics & project management, learning languages – Spanish, French, Arabic, and most recently Japanese - has long been my thing, and learning computer languages has been just as enjoyable.</p>
-          <p>Coding has opened my brain to new ways of thinking, and I'm excited to find myself in a new world of endless learning. When I'm not coding, you'll find me planning trips, reading books, or being fascinated as my one-year-old learns a new word.</p>
+          <p class="one">I'm an (almost) freshly-minted web developer, about to emerge from the mind-bending fog of General Assembly's Web Development Immersive course.</p>
+          <p>Transitioning from a background in linguistics & project management, learning languages – Spanish, French, Arabic, and most recently Japanese – has long been my thing, and learning computer languages has been just as enjoyable.</p>
+          <p>Coding has opened my brain to new ways of thinking, and I'm excited to find myself in a world of endless learning. When I'm not coding, you'll find me planning trips, reading books, or being fascinated as my one-year-old learns a new word.</p>
         </div>
         <div class="skills">
           <div class="skills-head">
@@ -74,12 +77,12 @@
         <h1 id="projects-heading">Projects</h1>
         <div class="project co-canvas">
           <figure class="circle">
-            <img src="../images/cocanvas.png" alt="CoCanvas">
+            <img src="images/cocanvas.png" alt="CoCanvas">
             <figcaption><a href="https://co-canvas.herokuapp.com" target="_blank">View the site/make art</a></figcaption>
           </figure>
           <div class="description">
             <div class="desc-text">
-              <h3>CoCanvas</h3>
+              <h2>CoCanvas</h2>
               <p>CoCanvas is a collaborative pixel art app that allows you to draw pixel art on a neverending canvas with friends and strangers on the internet.</p>
               <p>My first major group project, the app has a Rails backend and uses Action Cable and WebSockets to update the pixels live as users add them to the canvas. It also features a live chat component created in React.</p>
             </div>
@@ -90,12 +93,12 @@
         </div>
         <div class="project bookpinch">
           <figure class="circle">
-            <img src="../images/bookpinch.png" alt="BookPinch">
+            <img src="images/bookpinch.png" alt="BookPinch">
             <figcaption><a href="https://bookpinch.herokuapp.com">View site/pinch books</a></figcaption>
           </figure>
           <div class="description">
             <div class="desc-text">
-              <h3>BookPinch</h3>
+              <h2>BookPinch</h2>
               <p>BookPinch is built with Ruby on Rails. It allows users to search for books via the Goodreads API, track those books as 'to read', 'reading' and 'read', then find other users who love the same books you do, and explore their favourites shelf for your next book to pinch.</p>
             </div>
             <div class="desc-button">
@@ -105,12 +108,12 @@
         </div>
         <div class="project noughts-crosses">
           <figure class="circle">
-            <img src="../images/noughts&crosses.png" alt="Noughts&Crosses">
+            <img src="images/noughts&crosses.png" alt="Noughts&Crosses">
             <figcaption><a href="https://github.com/katshaze/project0" target="_blank">Play a game</a></figcaption>
           </figure>
           <div class="description">
             <div class="desc-text">
-              <h3>Noughts & Crosses</h3>
+              <h2>Noughts & Crosses</h2>
               <p>My first major project, this website allows you to play Noughts & Crosses against another human or the (not very smart at this stage) computer. It is built using JavaScript (including jQuery), HTML and CSS.</p>
               <p>It sounded simple, but coding this was my first proper foray into the mind-stretching world of game logic and following my code around and around as it played out, only to re-write and re-follow it until finally it (more or less) acted how I was hoping. I won't soon forget that sweet feeling.</p>
             </div>
