--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Katrina Hayes</title>
+  <title>Katrina Hayes - Web Developer</title>
   <style>
   @import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans|Open+Sans|Raleway');
   </style>
@@ -14,6 +14,9 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <script src="js/animations.js"></script>
   <script src="js/canvas.js"></script>
+  <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon"> -->
+  <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
  </head>
  <body>
   <div class="container">
@@ -36,7 +39,9 @@
           </div>
         </div>
       </div>
-
+      <div class="scroll-down">
+        <a id="scroll-down" class="fas fa-angle-double-down"></a>
+      </div>
     </header>
     <div class="main">
       <div class="about">
@@ -83,8 +88,8 @@
           <div class="description">
             <div class="desc-text">
               <h2>CoCanvas</h2>
-              <p>CoCanvas is a collaborative pixel art app that allows you to draw pixel art on a neverending canvas with friends and strangers on the internet.</p>
-              <p>My first major group project, the app has a Rails backend and uses Action Cable and WebSockets to update the pixels live as users add them to the canvas. It also features a live chat component created in React.</p>
+              <p>CoCanvas is a pixel art app that allows users to draw pixel art on a neverending canvas with friends and strangers on the internet. It was developed in collaboration with Mandy Tang, Vu Le and Rob Harkness.</p>
+              <p>CoCanvas has a Rails backend, is fully responsive, and features multiuser drawing on a canvas element updated live via Action Cable and WebSockets as well as a live chat component created in React.js.</p>
             </div>
             <div class="desc-button">
               <button class="code"><a href="https://github.com/cocanvas" target="_blank">Show me the code!</a></button>
@@ -99,7 +104,7 @@
           <div class="description">
             <div class="desc-text">
               <h2>BookPinch</h2>
-              <p>BookPinch is built with Ruby on Rails. It allows users to search for books via the Goodreads API, track those books as 'to read', 'reading' and 'read', then find other users who love the same books you do, and explore their favourites shelf for your next book to pinch.</p>
+              <p>BookPinch is a book tracking app built with Ruby on Rails. It allows users to search for books via the Goodreads API, track those books as 'to read', 'reading' and 'read', then find other users who have similar book tastes, then explore their favourites shelf for reading ideas.</p>
             </div>
             <div class="desc-button">
               <button class="code"><a href="https://github.com/katshaze/project1" target="_blank">Show me the code!</a></button>
@@ -114,8 +119,8 @@
           <div class="description">
             <div class="desc-text">
               <h2>Noughts & Crosses</h2>
-              <p>My first major project, this website allows you to play Noughts & Crosses against another human or the (not very smart at this stage) computer. It is built using JavaScript (including jQuery), HTML and CSS.</p>
-              <p>It sounded simple, but coding this was my first proper foray into the mind-stretching world of game logic and following my code around and around as it played out, only to re-write and re-follow it until finally it (more or less) acted how I was hoping. I won't soon forget that sweet feeling.</p>
+              <p>My first major project, this website allows users to play Noughts & Crosses against another human or the (not very smart at this stage) computer. It is built using JavaScript (including jQuery), HTML and CSS.</p>
+              <p>It sounded simple, but coding this was my first proper foray into the mind-stretching world of game logic. I followed my code around and around as it played out, only to re-write and re-follow it until (finally!) it more or less acted how I was hoping. I won't soon forget that sweet feeling.</p>
             </div>
             <div class="desc-button">
               <button class="code"><a href="https://github.com/katshaze/project0" target="_blank">Show me the code!</button>
