--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <script src="js/animations.js"></script>
   <script src="js/canvas.js"></script>
-  <!-- <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon"> -->
   <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
  </head>
  <body>
@@ -39,46 +37,53 @@
           </div>
         </div>
       </div>
-      <div class="scroll-down">
-        <a id="scroll-down" class="fas fa-angle-double-down"></a>
+      <div class="scroll-down intro-arrows">
+        <a id="intro-arrows" class="fas fa-angle-double-down"></a>
       </div>
     </header>
     <div class="main">
       <div class="about">
-        <h1 id="about-heading">About</h1>
-        <div class="about-info">
-          <p class="one">I'm an (almost) freshly-minted web developer, about to emerge from the mind-bending fog of General Assembly's Web Development Immersive course.</p>
-          <p>Transitioning from a background in linguistics & project management, learning languages – Spanish, French, Arabic, and most recently Japanese – has long been my thing, and learning computer languages has been just as enjoyable.</p>
-          <p>Coding has opened my brain to new ways of thinking, and I'm excited to find myself in a world of endless learning. When I'm not coding, you'll find me planning trips, reading books, or being fascinated as my one-year-old learns a new word.</p>
+        <div class="about-spacer"></div>
+        <div class="about-text">
+          <h1 id="about-heading">About</h1>
+          <div class="about-info">
+            <p class="one">I'm an (almost) freshly-minted web developer, about to emerge from the mind-bending fog of General Assembly's Web Development Immersive course.</p>
+            <p>Transitioning from a background in linguistics & project management, learning languages – Spanish, French, Arabic, and most recently Japanese – has long been my thing, and learning computer languages has been just as enjoyable.</p>
+            <p>Coding has opened my brain to new ways of thinking, and I'm excited to find myself in a world of endless learning. When I'm not coding, you'll find me planning trips, reading books, or being fascinated as my one-year-old learns a new word.</p>
+          </div>
+          <div class="skills">
+            <div class="skills-head">
+              <h3>Skills</h3>
+            </div>
+            <div class="skills-body">
+              <div>JavaScript</div>
+              <div>jQuery</div>
+              <div>React.js</div>
+              <div>HTML5/CSS3</div>
+              <div>Ruby</div>
+              <div>Rails</div>
+              <div>AJAX</div>
+              <div>SQL</div>
+              <div>Git</div>
+            </div>
+          </div>
+          <div class="learning">
+            <div class="learning-head">
+              <h3>Learning</h3>
+            </div>
+            <div class="learning-body">
+              <div>Node.js</div>
+              <div>Python</div>
+            </div>
+          </div>
         </div>
-        <div class="skills">
-          <div class="skills-head">
-            <h3>Skills</h3>
-          </div>
-          <div class="skills-body">
-            <div>JavaScript</div>
-            <div>jQuery</div>
-            <div>React.js</div>
-            <div>HTML5/CSS3</div>
-            <div>Ruby</div>
-            <div>Rails</div>
-            <div>AJAX</div>
-            <div>SQL</div>
-            <div>Git</div>
-          </div>
-        </div>
-        <div class="learning">
-          <div class="learning-head">
-            <h3>Learning</h3>
-          </div>
-          <div class="learning-body">
-            <div>Node.js</div>
-            <div>Python</div>
-          </div>
+        <div class="scroll-down about-arrows">
+          <a id="about-arrows" class="fas fa-angle-double-down"></a>
         </div>
       </div>
 
       <div class="projects">
+        <div class="projects-spacer"></div>
         <h1 id="projects-heading">Projects</h1>
         <div class="project co-canvas">
           <figure class="circle">
