--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="intro">
         <div class="text-holder">
           <h1 class="hello">Katrina Hayes</h1>
-          <h1>Web developer. Language learner.</h1>
+          <h1>Web developer</h1>
           <div class='contact-icons'>
             <a class="fab fa-github" href="https://www.github.com/katshaze" target="_blank"></a>
             <a class="fab fa-linkedin" href="https://www.linkedin.com/in/katrina-hayes/" target="_blank"></a>
