finally fixed that freakin scroll glitch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
       <nav>
         <a id="home-nav" href="#">home</a>
-        <a id="about-nav" href="#">about</a>
+        <a id="about-nav">about</a>
         <a id="projects-nav" href="#">projects</a>
       </nav>
       <div class="spacer"></div>
@@ -37,10 +37,11 @@
           </div>
         </div>
       </div>
-      <div class="scroll-down intro-arrows">
+      <div class="scroll-down">
         <a id="intro-arrows" class="fas fa-angle-double-down"></a>
       </div>
     </header>
+    
     <div class="main">
       <div class="about">
         <div class="about-spacer"></div>
@@ -77,7 +78,7 @@
             </div>
           </div>
         </div>
-        <div class="scroll-down about-arrows">
+        <div class="scroll-down">
           <a id="about-arrows" class="fas fa-angle-double-down"></a>
         </div>
       </div>
@@ -119,7 +120,7 @@
         <div class="project noughts-crosses">
           <figure class="circle">
             <img src="images/noughts&crosses.png" alt="Noughts&Crosses">
-            <figcaption><a href="https://github.com/katshaze/project0" target="_blank">Play a game</a></figcaption>
+            <figcaption><a href="https://katshaze.github.io/project0" target="_blank">Play a game</a></figcaption>
           </figure>
           <div class="description">
             <div class="desc-text">
