--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a id="intro-arrows" class="fas fa-angle-double-down"></a>
       </div>
     </header>
-    
+
     <div class="main">
       <div class="about">
         <div class="about-spacer"></div>
@@ -105,7 +105,7 @@
         <div class="project bookpinch">
           <figure class="circle">
             <img src="images/bookpinch.png" alt="BookPinch">
-            <figcaption><a href="https://bookpinch.herokuapp.com">View site/pinch books</a></figcaption>
+            <figcaption><a href="https://bookpinch.herokuapp.com" target="_blank">View site/pinch books</a></figcaption>
           </figure>
           <div class="description">
             <div class="desc-text">
