--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="description">
             <div class="desc-text">
               <h2>BookPinch</h2>
-              <p>BookPinch is a book tracking app built with Ruby on Rails. It allows users to search for books via the Goodreads API, track those books as 'to read', 'reading' and 'read', then find other users who have similar book tastes, then explore their favourites shelf for reading ideas.</p>
+              <p>BookPinch is a book tracking app built with Ruby on Rails. It allows users to search for books via the Goodreads API, and track books as 'to read', 'reading' and 'read'. Users can then find other users who have similar book tastes, and explore their favourites shelf for new reading ideas.</p>
             </div>
             <div class="desc-button">
               <button class="code"><a href="https://github.com/katshaze/project1" target="_blank">Show me the code!</a></button>
