--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1 id="about-heading">About</h1>
           <div class="about-info">
             <p class="one">I'm an (almost) freshly-minted web developer, about to emerge from the mind-bending fog of General Assembly's Web Development Immersive course.</p>
-            <p>Transitioning from a background in linguistics & project management, learning languages – Spanish, French, Arabic, and most recently Japanese – has long been my thing, and learning computer languages has been just as enjoyable.</p>
+            <p>Learning languages – Spanish, French, Arabic, and most recently Japanese – has long been my thing. And learning computer languages has been just as enjoyable. I'm transitioning to developer from a background in linguistics & project management.</p>
             <p>Coding has opened my brain to new ways of thinking, and I'm excited to find myself in a world of endless learning. When I'm not coding, you'll find me planning trips, reading books, or being fascinated as my one-year-old learns a new word.</p>
           </div>
           <div class="skills">
