made elements bigger for when bigger screen size

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>Learning languages – Spanish, French, Arabic, and most recently Japanese – has long been my thing. And learning computer languages has been just as enjoyable. I'm transitioning to developer from a background in linguistics & project management.</p>
             <p>Coding has opened my brain to new ways of thinking, and I'm excited to find myself in a world of endless learning. When I'm not coding, you'll find me planning trips, reading books, or being fascinated as my one-year-old learns a new word.</p>
           </div>
-          <div class="skills">
+          <div class="skills mono">
             <div class="skills-head">
               <h3>Skills</h3>
             </div>
@@ -68,7 +68,7 @@
               <div>Git</div>
             </div>
           </div>
-          <div class="learning">
+          <div class="learning mono">
             <div class="learning-head">
               <h3>Learning</h3>
             </div>
@@ -98,7 +98,7 @@
               <p>CoCanvas has a Rails backend, is fully responsive, and features multiuser drawing on a canvas element updated live via Action Cable and WebSockets as well as a live chat component created in React.js.</p>
             </div>
             <div class="desc-button">
-              <button class="code"><a href="https://github.com/cocanvas" target="_blank">Show me the code!</a></button>
+              <button class="code mono"><a href="https://github.com/cocanvas" target="_blank">Show me the code!</a></button>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
               <p>BookPinch is a book tracking app built with Ruby on Rails. It allows users to search for books via the Goodreads API, and track books as 'to read', 'reading' and 'read'. Users can then find other users who have similar book tastes, and explore their favourites shelf for new reading ideas.</p>
             </div>
             <div class="desc-button">
-              <button class="code"><a href="https://github.com/katshaze/project1" target="_blank">Show me the code!</a></button>
+              <button class="code mono"><a href="https://github.com/katshaze/project1" target="_blank">Show me the code!</a></button>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
               <p>It sounded simple, but coding this was my first proper foray into the mind-stretching world of game logic. I followed my code around and around as it played out, only to re-write and re-follow it until (finally!) it more or less acted how I was hoping. I won't soon forget that sweet feeling.</p>
             </div>
             <div class="desc-button">
-              <button class="code"><a href="https://github.com/katshaze/project0" target="_blank">Show me the code!</button>
+              <button class="code mono"><a href="https://github.com/katshaze/project0" target="_blank">Show me the code!</a></button>
             </div>
           </div>
         </div>
@@ -143,6 +143,5 @@
     </footer>
     <canvas id="myCanvas"></canvas>
   </div>
-
  </body>
 </html>
